k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
  namespace: hello-k8s
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      serviceAccountName: hello-sa
      containers:
        - name: hello-app
          image: richardlong98/hello-kubernetes:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: docker-registry-secret
