k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: hello-k8s
spec:
  selector:
    app: hello-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
